--- a/Source/ui/Base.lproj/Main.storyboard
+++ b/Source/ui/Base.lproj/Main.storyboard
@@ -51,12 +51,80 @@
                             </menuItem>
                             <menuItem title="File" id="dMs-cI-mzQ">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="File" id="bib-Uj-vzu">
+                                <menu key="submenu" title="File" autoenablesItems="NO" id="bib-Uj-vzu">
                                     <items>
-                                        <menuItem title="Close" keyEquivalent="w" id="DVo-aG-piG">
+                                        <menuItem title="New Folder" id="a2C-zw-WJ5">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
-                                                <action selector="performClose:" target="Ady-hI-5gd" id="HmO-Ls-i7Q"/>
+                                                <action selector="createFolder:" target="Voe-Tx-rLC" id="tqi-VR-N0f"/>
                                             </connections>
+                                        </menuItem>
+                                        <menuItem title="New Text File" id="FwD-hV-V7J">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="createTextFile:" target="Voe-Tx-rLC" id="9KV-s9-Osd"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="New Table" id="j7E-b8-Ch8">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <menu key="submenu" title="New Table" autoenablesItems="NO" id="JWJ-jd-fvy">
+                                                <items>
+                                                    <menuItem title="2 Columns" id="QUL-jP-30A">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="VCT-2y-fAc"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="3 Columns" id="CEG-BV-W78">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="U9T-GJ-QPe"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="4 Columns" id="tiz-oG-0Ib">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="CRN-Dm-ZJr"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="5 Columns" id="zgH-mv-0mX">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="zhX-iw-LSM"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="6 Columns" id="gBe-9h-mEN">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="s3E-UJ-R1d"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="7 Columns" id="ON0-cp-huI">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="h0e-WL-ltO"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="8 Columns" id="WP1-hN-cbz">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="eFH-OO-wNg"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="9 Columns" id="SV7-z3-rk0">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="8Bi-0P-pBF"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="10 Columns" id="3Ia-vj-KGq">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="JVS-p9-mPd"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                </items>
+                                            </menu>
                                         </menuItem>
                                     </items>
                                 </menu>
@@ -184,6 +252,8 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BrainCache" customModuleProvider="target">
                     <connections>
+                        <outlet property="createTableMenu" destination="j7E-b8-Ch8" id="h9l-uq-lur"/>
+                        <outlet property="createTextFileMenu" destination="FwD-hV-V7J" id="gzI-cW-0iB"/>
                         <outlet property="deleteFileMenu" destination="pa3-QI-u2k" id="iy5-z5-WIY"/>
                         <outlet property="deleteFolderMenu" destination="Ruw-6m-B2m" id="cjy-cD-epW"/>
                         <outlet property="monoFontMenu" destination="HnU-Bf-pMR" id="jYI-RV-VRY"/>
