--- a/Source/ui/Base.lproj/Main.storyboard
+++ b/Source/ui/Base.lproj/Main.storyboard
@@ -65,62 +65,123 @@
                                                 <action selector="createTextFile:" target="Voe-Tx-rLC" id="9KV-s9-Osd"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="New Table" id="j7E-b8-Ch8">
+                                        <menuItem title="New Table" id="nbb-zb-TA6">
                                             <modifierMask key="keyEquivalentModifierMask"/>
-                                            <menu key="submenu" title="New Table" autoenablesItems="NO" id="JWJ-jd-fvy">
+                                            <menu key="submenu" title="New Table" autoenablesItems="NO" id="7Wz-mF-XsQ">
+                                                <items>
+                                                    <menuItem title="2 Columns" id="WX9-OR-AOY">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="BPW-2g-MBt"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="3 Columns" id="kqi-O5-cSQ">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="mct-Sf-Ltw"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="4 Columns" id="Jt9-4k-rtZ">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="E3y-an-MhF"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="5 Columns" id="yig-HW-V9R">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="irQ-cx-BeF"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="6 Columns" id="DJu-8x-RGr">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="JGF-iQ-uTy"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="7 Columns" id="B15-wa-bjf">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="bcu-a3-Y1b"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="8 Columns" id="nfi-tL-7RR">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="Xby-oT-h8Y"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="9 Columns" id="vZM-gN-wrI">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="EC2-MV-ueA"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="10 Columns" id="2bA-7a-L6L">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="Zf9-cp-o2e"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                </items>
+                                            </menu>
+                                        </menuItem>
+                                        <menuItem title="New List" id="j7E-b8-Ch8">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <menu key="submenu" title="New List" autoenablesItems="NO" id="JWJ-jd-fvy">
                                                 <items>
                                                     <menuItem title="2 Columns" id="QUL-jP-30A">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="VCT-2y-fAc"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="bj4-zw-8il"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="3 Columns" id="CEG-BV-W78">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="U9T-GJ-QPe"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="VqE-sy-DU3"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="4 Columns" id="tiz-oG-0Ib">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="CRN-Dm-ZJr"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="gnu-Ky-3KF"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="5 Columns" id="zgH-mv-0mX">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="zhX-iw-LSM"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="ZI4-iI-TTT"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="6 Columns" id="gBe-9h-mEN">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="s3E-UJ-R1d"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="JwG-21-lmt"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="7 Columns" id="ON0-cp-huI">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="h0e-WL-ltO"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="wob-5g-Yrp"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="8 Columns" id="WP1-hN-cbz">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="eFH-OO-wNg"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="5iv-Qs-psq"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="9 Columns" id="SV7-z3-rk0">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="8Bi-0P-pBF"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="5SN-UJ-Y2z"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="10 Columns" id="3Ia-vj-KGq">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="JVS-p9-mPd"/>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="nFR-Yf-xkS"/>
                                                         </connections>
                                                     </menuItem>
                                                 </items>
@@ -252,7 +313,8 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BrainCache" customModuleProvider="target">
                     <connections>
-                        <outlet property="createTableMenu" destination="j7E-b8-Ch8" id="h9l-uq-lur"/>
+                        <outlet property="createListMenu" destination="j7E-b8-Ch8" id="FXD-mQ-kXc"/>
+                        <outlet property="createTableMenu" destination="nbb-zb-TA6" id="1s2-Te-e3T"/>
                         <outlet property="createTextFileMenu" destination="FwD-hV-V7J" id="gzI-cW-0iB"/>
                         <outlet property="deleteFileMenu" destination="pa3-QI-u2k" id="iy5-z5-WIY"/>
                         <outlet property="deleteFolderMenu" destination="Ruw-6m-B2m" id="cjy-cD-epW"/>
