--- a/Source/ui/Base.lproj/Main.storyboard
+++ b/Source/ui/Base.lproj/Main.storyboard
@@ -69,10 +69,16 @@
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <menu key="submenu" title="New Table" autoenablesItems="NO" id="7Wz-mF-XsQ">
                                                 <items>
-                                                    <menuItem title="2 Columns" id="WX9-OR-AOY">
+                                                    <menuItem title="1 Column" id="WX9-OR-AOY">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
                                                             <action selector="createTable:" target="Voe-Tx-rLC" id="BPW-2g-MBt"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="2 Columns" id="mrA-bF-2Tg">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createTable:" target="Voe-Tx-rLC" id="n0p-AH-zLw"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="3 Columns" id="kqi-O5-cSQ">
@@ -130,10 +136,16 @@
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <menu key="submenu" title="New List" autoenablesItems="NO" id="JWJ-jd-fvy">
                                                 <items>
-                                                    <menuItem title="2 Columns" id="QUL-jP-30A">
+                                                    <menuItem title="1 Column" id="QUL-jP-30A">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
                                                             <action selector="createList:" target="Voe-Tx-rLC" id="bj4-zw-8il"/>
+                                                        </connections>
+                                                    </menuItem>
+                                                    <menuItem title="2 Columns" id="hAV-ag-ukT">
+                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <action selector="createList:" target="Voe-Tx-rLC" id="ZcR-cp-rHV"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="3 Columns" id="CEG-BV-W78">
